[gd_scene load_steps=4 format=3 uid="uid://b0dxnf0cmgpxe"]

[ext_resource type="Script" path="res://scripts/ui/entity_panel.gd" id="1_kjpjc"]
[ext_resource type="LabelSettings" uid="uid://74g2xjgag6f2" path="res://scenes/ui/inventory/entity_panel_label_settings.tres" id="2_5tq14"]
[ext_resource type="PackedScene" uid="uid://caoh3fsc3frxc" path="res://scenes/entities/pattern_suppressor_model.tscn" id="4_0x4hb"]

[node name="EntityPanel" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 0
offset_right = 128.0
offset_bottom = 128.0
script = ExtResource("1_kjpjc")

[node name="CountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -11.0
grow_horizontal = 0
grow_vertical = 0
text = "99"
label_settings = ExtResource("2_5tq14")
horizontal_alignment = 2
vertical_alignment = 2

[node name="SlotNumberLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -4.0
offset_top = -12.0
offset_right = 4.0
grow_horizontal = 2
text = "1"
label_settings = ExtResource("2_5tq14")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -11.0
offset_right = 78.0
grow_vertical = 0
text = "entity name"
label_settings = ExtResource("2_5tq14")
vertical_alignment = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
own_world_3d = true
transparent_bg = true
size = Vector2i(128, 128)

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.917755, 0.397148, 0, -0.397148, 0.917755, 0, 0.416, 0.886)
fov = 30.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport/Camera3D"]

[node name="ModelHolder" type="Node3D" parent="SubViewportContainer/SubViewport"]

[node name="PatternSuppressorModel" parent="SubViewportContainer/SubViewport/ModelHolder" instance=ExtResource("4_0x4hb")]
